# pycargo

./: Cargo.toml  README.md  main.py  pycargo-0.1.0-x86_64.msi  pycargo-0.2.0-x86_64.msi  pycargo-0.2.1-x86_64.msi  pycargo-0.2.10-x86_64.msi  pycargo-0.2.2-x86_64.msi  pycargo-0.2.3-x86_64.msi  pycargo-0.2.4-x86_64.msi  pycargo-0.2.5-x86_64.msi  pycargo-0.2.6-x86_64.msi  pycargo-0.2.7-x86_64.msi  pycargo-0.2.8-x86_64.msi  pycargo-0.2.9-x86_64.msi  pyproject.toml
src/: main.rs
src/templates/: datascience.txt
templates/: advanced.txt  datascience.txt
test_pycargo/: main.py  pyproject.toml  requirements.txt
test_ujg/: main.py  pyproject.toml
testujg456/: main.py  pyproject.toml
wix/: License.rtf  main.wxs
