[package]
name = "pycargo"
version = "0.1.0"
edition = "2024"
authors = ["Utkarsh Gaikwad"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
