[package]
name = "pycargo"
version = "0.2.8"
edition = "2024"
authors = ["Utkarsh Gaikwad"]
license = "MIT"
include = ["src/**", "templates/**"]
description = "Bootstrap Python projects using a Rust CLI"
repository = "https://github.com/utkarshg1/pycargo"
readme = "README.md"
keywords = ["python", "cli", "project", "bootstrap"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
colored = "3.0.0"
indicatif = "0.17.11"
