[project]
name = "pycargo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]

[tool.uv.workspace]
members = [
    "testujg",
]
